# trueno-rag

./: .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: retrieval.rs
book/: book.toml
book/src/: SUMMARY.md  installation.md  introduction.md  quickstart.md
book/src/advanced/: compression.md  metrics.md  nemotron-embeddings.md  performance.md  preprocessing.md  semantic-chunking.md  semantic-embeddings.md
book/src/api/: chunkers.md  embedders.md  pipeline.md  rerankers.md  retrievers.md
book/src/concepts/: chunking.md  embeddings.md  fusion.md  pipeline.md  reranking.md  retrieval.md
book/src/examples/: basic.md  custom-chunking.md  hybrid-search.md
crates/trueno-rag-cli/: Cargo.toml
crates/trueno-rag-cli/src/: main.rs
crates/trueno-rag-cli/tests/: cli_tests.rs
docs/roadmaps/: roadmap.yaml
docs/specifications/: rag-pipeline-spec.md
examples/: basic_rag.rs  chunking_strategies.rs  compressed_index.rs  hybrid_search.rs  metrics_evaluation.rs  nemotron_embeddings.rs  semantic_embeddings.rs
proptest-regressions/: metrics.txt
src/: chunk.rs  compressed.rs  embed.rs  error.rs  fusion.rs  index.rs  lib.rs  metrics.rs  pipeline.rs  preprocess.rs  rerank.rs  retrieve.rs
tests/: integration.rs  nemotron_integration.rs  property_tests.rs
