[workspace]
members = [".", "crates/trueno-rag-cli"]

[workspace.lints.rust]
# Safety
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"

# Code Quality
unreachable_pub = "warn"
missing_debug_implementations = "allow"  # Many generic types don't need Debug

# Best Practices
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Base level
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Correctness
checked_conversions = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Performance
inefficient_to_string = "warn"
explicit_iter_loop = "warn"

# Style & Clarity
explicit_deref_methods = "warn"
implicit_clone = "warn"
redundant_closure_for_method_calls = "warn"

# Allow pedantic lints that conflict with RAG patterns
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
multiple_crate_versions = "allow"
uninlined_format_args = "allow"
manual_div_ceil = "allow"
manual_range_contains = "allow"
needless_raw_string_hashes = "allow"

[package]
name = "trueno-rag"
version = "0.1.5"
edition = "2021"
authors = ["Pragmatic AI Labs"]
description = "Pure-Rust Retrieval-Augmented Generation pipeline built on Trueno"
license = "MIT"
repository = "https://github.com/paiml/trueno-rag"
keywords = ["rag", "retrieval", "embeddings", "nlp", "vector-search"]
categories = ["text-processing", "science"]

[dependencies]
# Core compute
trueno = "0.10.1"
trueno-db = "0.3.9"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "retrieval"
harness = false

[profile.release]
lto = true
codegen-units = 1

[lints]
workspace = true
