[package]
name = "trueno-rag-cli"
version = "0.1.0"
edition = "2021"
authors = ["Pragmatic AI Labs"]
description = "CLI for Trueno-RAG pipeline"
license = "MIT"
repository = "https://github.com/paiml/trueno-rag"

[[bin]]
name = "trueno-rag"
path = "src/main.rs"

[dependencies]
trueno-rag = { path = "../.." }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"

[lints]
workspace = true
