[package]
name = "trueno-rag-cli"
version = "0.1.3"
edition = "2021"
authors = ["Pragmatic AI Labs"]
description = "CLI for Trueno-RAG pipeline"
license = "MIT"
repository = "https://github.com/paiml/trueno-rag"

[[bin]]
name = "trueno-rag"
path = "src/main.rs"

[dependencies]
trueno-rag = { version = "0.1.6", path = "../.." }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[features]
default = []
# Enable production semantic embeddings via fastembed (GH-1)
embeddings = ["trueno-rag/embeddings"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"

[lints]
workspace = true
